# python-machine-learning-challenge

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml
backend-python-challenge/: .env-template  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend-python-challenge/src/api/: app.py  main.py  utils.py
backend-python-challenge/src/api/controllers/: animals_controller.py  get_all_models_controller.py  get_predictions_controller.py  predict_controller.py  train_controller.py  validate_controller.py
backend-python-challenge/src/api/models/: animal_data.py  generic_response.py  synthetic_data.py
backend-python-challenge/src/api/routes/: animals_routes.py  machine_learning_routes.py
backend-python-challenge/src/clustering/: cluster_data.py
backend-python-challenge/src/config/: minio_config.py  settings.py
backend-python-challenge/src/machine_learning/: classify.py  machine_learning_functions.py  predict.py  validate.py
backend-python-challenge/src/machine_learning/models/: analysis_result.py
visualization/: Dockerfile  pyproject.toml  requirements.txt
visualization/src/visualization/: __init__.py  api_calls.py  app.py  settings.py
